# assassinate

./: .dockerignore  .gitignore  Dockerfile.test  Doxyfile  IPC_ARCHITECTURE.md  MSF_API_COVERAGE.md  README.md  TESTING.md  TESTING_GUIDE.md  TEST_COVERAGE_SUMMARY.md  docker-compose.test.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  test_phase1_modules.py  test_python_ruby_poc.py
.github/: CI_README.md
.github/scripts/: test-ci-locally.sh
.github/workflows/: ci.yml  distro-matrix.yml  python-ipc-ci.yml
assassinate/: __init__.py  async_core.py  core.py  exceptions.py  fire_bullet.py  logger.py  logging.py  requirements.txt  utils.py
assassinate/bridge/: __init__.py  async_api.py  client_utils.py  core.py  datastore.py  db.py  jobs.py  modules.py  payloads.py  sessions.py  sync_api.py
assassinate/core/bullet/: __init__.py  base.py  shells.py
assassinate/hideout/: main.py
assassinate/ipc/: __init__.py  client.py  errors.py  protocol.py  shm.py  sync.py
assassinate/tests/: __init__.py  test_async_core.py  test_core.py
assassinate_bridge/: Cargo.toml  MSF_TEST_RESULTS.md  build.rs  setup_db_manual.sh  setup_test_db.sh
assassinate_bridge/src/: error.rs  framework.rs  lib.rs  ruby_bridge.rs
assassinate_bridge/tests/: integration_tests.rs
assassinate_daemon/: Cargo.toml
assassinate_daemon/src/: main.rs
assassinate_ipc/: Cargo.toml  README.md
assassinate_ipc/src/: lib.rs  protocol.rs  shm.rs
bbot/: assassinate.py  bbot_assassinate.py
docker/test/: Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.kali  Dockerfile.ubuntu  README.md  docker-compose.yml  test-distros.sh
docs/: Makefile  api_reference.md  architecture.md  ci_cd.md  conf.py  contributing.md  index.rst  installation.md  usage.md
examples/: logging_demo.py  low_level_bridge.py  show_rust_logging.sh  unified_logging_demo.sh
metasploit_core/: Makefile  README.md  metasploit_core.c  metasploit_core.h
metasploit_python_bridge/: Cargo.toml
metasploit_python_bridge/src/: lib.rs  python_bindings.rs  ruby_bridge.rs
python/: __init__.py  async_core.py  core.py  exceptions.py  logger.py  requirements.txt  utils.py
python/tests/: test_async_core.py  test_core.py
rust/bridge/: Cargo.toml  fix_postgres_collation.sh
rust/bridge/spec/: README.md  bridge_spec_helper.rb  bridge_spec_helper_minimal.rb  bridge_validation_spec.rb  run_msf_tests.sh
rust/bridge/spec/support/shared/contexts/: bridge_framework.rb
rust/bridge/src/: framework.rs  lib.rs  ruby_bridge.rs
rust/bridge/tests/: integration_tests.rs
rust/daemon/: Cargo.toml
rust/daemon/src/: main.rs
rust/ipc/: Cargo.toml  build.rs
rust/ipc/schema/: msf.capnp
rust/ipc/src/: error.rs  lib.rs  protocol.rs  ring_buffer.rs  shm.rs
scripts/: test-local.sh  test-with-docker.sh
scripts/ci/: test-arch.sh  test-debian-ubuntu.sh  test-fedora.sh  test-kali.sh  test-parrot.sh  test-ubuntu-full.sh
scripts/install/: arch.sh  debian.sh  fedora.sh  kali.sh  parrot.sh  ubuntu.sh
tests/: __init__.py  conftest.py  test_async_api.py  test_client_protocol.py  test_datastore.py  test_db.py  test_framework_detailed.py  test_jobs.py  test_module_detailed.py  test_payloads.py  test_plugins.py  test_sessions.py  test_sync_api.py
