[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assassinate"
version = "0.1.0"
description = "A modular, themed exploitation framework with payload (bullet) generation."
authors = [
    { name = "Austin Stark", email = "austin.stark@blacklanternsecurity.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["exploitation", "pentest", "payload", "framework", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
    "pwntools>=4.9.0",
    "impacket>=0.11.0",
    "lief>=0.13.2",
    "keystone-engine>=0.9.2",
    "capstone>=5.0.1",
    "pwncat-cs>=0.4.0",
    "pex @ git+https://github.com/EntySec/Pex.git"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.3.0"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.hatch.build.targets.wheel]
packages = ["assassinate"]

[tool.hatch.metadata]
allow-direct-references = true
