[package]
name = "assassinate_ipc"
version = "0.1.0"
edition = "2021"
authors = ["Austin Stark <austin.stark@blacklanternsecurity.com>"]
description = "Ultra-low-latency IPC layer for Assassinate (Python <-> Rust/MSF communication)"
license = "GPL-3.0"

[lib]
name = "assassinate_ipc"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Shared memory
memfd = "0.6"                    # Linux memfd_create for tmpfs-backed shared memory
shared_memory = "0.12"           # Cross-platform shared memory
libc = "0.2"                     # Direct syscalls for mmap/munmap

# Atomic operations and concurrency
crossbeam-utils = "0.8"          # Memory ordering helpers
parking_lot = "0.12"             # Fast synchronization primitives (if needed)

# Serialization
capnp = "0.19"                   # Cap'n Proto runtime
capnpc = "0.19"                  # Cap'n Proto compiler (build-time)

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.0"                    # Byte buffer utilities
serde_json = "1.0"               # JSON for message args

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"                 # Property-based testing

[build-dependencies]
capnpc = "0.19"                  # Build-time schema compilation

# Benchmarks (to be added)
# [[bench]]
# name = "ring_buffer"
# harness = false
#
# [[bench]]
# name = "latency"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = false  # Keep symbols for profiling

[profile.bench]
inherits = "release"
