[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
authors = ["Austin Stark <austin.stark@blacklanternsecurity.com>"]
description = "High-performance IPC daemon bridging Python to Metasploit Framework"
license = "GPL-3.0"

[dependencies]
# Local crates
bridge = { path = "../bridge" }
ipc = { path = "../ipc" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Synchronization
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = false  # Keep symbols for debugging
